Fix issue with closing containers too slowly